googlemap widget  alignment fix.
git-svn-id: svn+ssh://svn.bestpractical.com/svn/jifty.org/jifty/trunk@3659 e84bef0a-9b06-0410-84ba-c4c9edb13aeb

--- a/share/plugins/Jifty/Plugin/GoogleMap/web/static/css/google_map.css
+++ b/share/plugins/Jifty/Plugin/GoogleMap/web/static/css/google_map.css
@@ -7,7 +7,7 @@ div .googlemap-search-results {
     border-style:dashed;
     display:none;
     height:450px;
-    left:250px;
+    left:50px;
     position:relative;
     top:-300px;
     width:250px;
